5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1601_588.log
== TEST (2019-04-26 23:17:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor=(int(input("valor do saque:")))
notas100=valor//100

resto100 = valor % 100

notas50 = resto100 // 50

resto100 = resto100 % 50

nottos10 = resto100 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:18:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor=(int(input("valor do saque:")))
notas100=valor//100

resto100 = valor % 100

notas50 = resto100 // 50

resto100 = resto100 % 50

nottos10 = resto100 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:18:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor=(int(input("valor do saque:")))
notas100=valor//100

resto100 = valor % 100

notas50 = resto100 // 50

resto100 = resto100 % 50

nottos10 = resto100 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:18:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor=(int(input("valor do saque:")))
notas100=valor//100

resto100 = valor % 100

notas50 = resto100 // 50

resto100 = resto100 % 50

notos10 = resto100 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(int(notas10))
NameError: name 'notas10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 23:19:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor=(int(input("valor do saque:")))
notas100=valor//100

resto100 = valor % 100

notas50 = resto100 // 50

resto100 = resto100 % 50

notas10 = resto100 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))
-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 23:19:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor=(int(input("valor do saque:")))
notas100=valor//100

resto100 = valor % 100

notas50 = resto100 // 50

resto100 = resto100 % 50

notas10 = resto100 // 10

print(int(notas100))
print(int(notas50))
print(int(notas10))
-- EXECUTION TIME:
0.19086
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
